# ADA502-FireGuard

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy-nrec.yml
keycloak_exports/: fireguard-realm.json
src/ada502_fireguard/: main.py
src/ada502_fireguard/templates/: index.html  mainpage.html
